fix: responsiveness fix + jump from question to button

--- a/docs/css/outputSteps.css
+++ b/docs/css/outputSteps.css
@@ -85,3 +85,8 @@ p.placeholder {
         }
     }
 }
+@media (max-width: 30em) {
+    .endText ol li img {
+        max-width: 100%;
+    }
+}
